adding the right color

--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ body {
 }
 
 .colorful-letter{
-    background-image: linear-gradient(135deg, rgb(220, 35, 91)0%, rgb(107, 69, 92)60%);
+    background-image: linear-gradient(135deg, rgb(249, 57, 115)0%, rgb(163, 115, 144)60%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -649,9 +649,9 @@ footer{
 }
 
 /* DARK THEME */
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
     body {
-        background-color: rgba(45, 45, 45, 1);
+        background-color: rgb(72, 71, 71);
         color: white;
     }
 
@@ -727,4 +727,4 @@ footer{
             margin-right: 10px;
         }
     }
-} */
+}
